--- a/UPES_Event/package.json
+++ b/UPES_Event/package.json
@@ -1,10 +1,23 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
-  "description": "generates a test json file for use by mongodb",
-  "main": "app.js",
+  "name": "imgin",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "async": "^0.9.0",
-    "mongodb": "^1.4.20"
-  }
+    "body-parser": "~1.17.1",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
+    "jade": "~1.11.0",
+    "morgan": "~1.8.1",
+    "serve-favicon": "~2.4.2",
+    "mongoose": "*"
+  },
+  "description": "image insertion",
+  "main": "app.js",
+  "devDependencies": {},
+  "author": "Shubham Sinha",
+  "license": "ISC"
 }
